# DMXRaspberry

./: DMXcontroller.py  Dockerfile  README.md  app.py  dmx.db  run.py  test.json  test2.py
DMXcontroller/: __init__.py  dmx.db  dmx.sqbpro  models.py  player.py  routes.py  test.py
DMXcontroller/static/: Lampen.css  Leisten.css  Scheinwerfer.css  Scheinwerfer.js  abspielmodus.css  abspielmodus.js  dropdown.css  fixture_form.js  index.css  leisten.js  main.js  navbar.css  p_new.js  programmier_edit.js  schwarzlich.js  schwarzlicht.css  schwarzlicht.js
DMXcontroller/templates/: 404.html  Leisten.html  MIDI_buttons.html  Scheinwerfer.html  (+11 more)
client/: README.md  package-lock.json  package.json  store.tsx  test_data.json
server/: .Cargo.toml.un~  .gitignore  Cargo.toml  Universe.json  config.json
server/Universes/: Default.json
server/src/: channel.rs  config.rs  db.rs  dmx_player  fixture.rs  main.rs  state.rs  universe.rs
server/src/actors/: README.md  mod.rs
server/src/actors/dmx/: README.md  dmxactor.rs  mod.rs
server/src/actors/websockets/: README.md  datasocket.rs  messages.rs  mod.rs  server.rs
server/src/dmx_api/: README.md  channel.rs  cyclical_program.rs  dmx_thread.rs  fixture.rs  mod.rs  program.rs  scene.rs  universe.rs
server/src/routes/: api.rs  mod.rs  websocket.rs
server/src/websockets/: datasocket.rs  lobby.rs  messages.rs  mod.rs  server.rs  wsconn.rs
static/: Scheinwerfer.js  index.css  index.js  leisten.js  main.js  navbar.css
templates/: Scheinwerfer.html  Schwarzlicht.html  index.html  layout.html  lel.html  programmiermodus.html
(+37 files in other folders)
