[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-actors = "4.2.0"
dmx-serial = "*"
dmx = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "1.0"
spin_sleep = "1.1.1"
log = "0.4"