[package]
name = "dmxserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.3"
actix-web-actors = "4.1.0"
actix-ws = "0.2.5"
actix-files = "*"
dmx-serial = "*"
dmx = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "1.0"
serde-big-array = "0.5.0"
spin_sleep = "1.1.1"
rand="0.8"
log = "0.4"
uuid = { version = "1.3.0", features = ["serde", "v4"] }